--- a/webapp/view/GoodsIssueResvList.view.xml
+++ b/webapp/view/GoodsIssueResvList.view.xml
@@ -61,6 +61,10 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueResvList"
 							scanFail="onScanError"
 							dialogTitle="Barcode Scanner" >
 						</ndc:BarcodeScannerButton>
+						<Button 
+							icon="sap-icon://excel-attachment" 
+							press="onExportExtract"
+							tooltip="Download Extract"/>
 					</OverflowToolbar>
 				</headerToolbar>
 
@@ -75,7 +79,13 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueResvList"
 						<Text text="Req Date / Recipient" />
 					</Column>
 					<Column minScreenWidth="Tablet" demandPopin="true">
-						<Text text="Acct. Assign." />
+						<Text text="Work Order" />
+					</Column>
+					<Column minScreenWidth="Tablet" demandPopin="true">
+						<Text text="Cost Center" />
+					</Column>
+					<Column minScreenWidth="Tablet" demandPopin="true">
+						<Text text="WBS Element" />
 					</Column>
 					<Column minScreenWidth="Tablet" demandPopin="true">
 						<Text text="Storage Bin" />
@@ -85,12 +95,6 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueResvList"
 					</Column>
 					<Column hAlign="End">
 						<Text text="Open Qty" />
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true" hAlign="End">
-						<Text text="Workorder" />
-					</Column>
-					<Column minScreenWidth="Tablet" demandPopin="true" hAlign="End">
-						<Text text="Cost Center" />
 					</Column>
 				</columns>
 				<items>
@@ -110,9 +114,17 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueResvList"
 								text="{customResvItemSrv>GoodsRecipientName}" />
 								
 							<ObjectIdentifier
-								title="{ path: 'customResvItemSrv>', formatter: '.formatter.resvAccAssignObject' }"
-								text="{ path: 'customResvItemSrv>', formatter: '.formatter.resvAccAssignDesc' }" />
-								
+								title="{customResvItemSrv>ManufacturingOrder}"
+								text="{customResvItemSrv>OrderDescription}" />
+						
+							<ObjectIdentifier
+								title="{customResvItemSrv>CostCenter}"
+								text="{customResvItemSrv>CostCenterDescription}" />
+							
+							<ObjectIdentifier
+								title="{customResvItemSrv>WBSElement}"
+								text="{customResvItemSrv>WBSDescription}" />
+															
 							<ObjectIdentifier
 								text="{customResvItemSrv>WarehouseStorageBin}" />
 							
@@ -147,11 +159,6 @@ controllerName="dyflex.mm.s4cloud.warehouse.controller.GoodsIssueResvList"
 								}"
 								unit="{customResvItemSrv>BaseUnit}" />
 							
-							<ObjectIdentifier
-								text="{customResvItemSrv>ManufacturingOrder}" />
-								
-							<ObjectIdentifier
-								text="{customResvItemSrv>CostCenter}" />
 						</cells>
 					</ColumnListItem>
 				</items>
